package com.github.alextheartisan.boox.domain;

public class Annotation {

    Long id;
}
