package com.github.alextheartisan.boox.domain;

public class Project {}
